samples/_failures_safe/1761612636_f176d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af5c5a2e.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_af5c5a2e.c:157:9: error: expected expression at end of input
  157 |         if (i <
      |         ^~
./samples/SAFE/__tmp_af5c5a2e.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_af5c5a2e.c:157:9: error: expected declaration or statement at end of input
